prover-ray/zkcdriver/testdata/synced/invalid/while_03.zkc
//error:4:19-20:unexpected token
fn f(x:u8) -> (r:u8) {
  r = 0
  while x == (x + ) {
    r = 1
  }
  return
}
